# ReactLearn

./: Inform.md  README.md  docker-compose.yaml  speech.js  speech.ts
services/mock-users-backend/: Dockerfile  main.py  pyproject.toml  user_list.py
services/mpa/: package-lock.json  package.json
services/mpa/src/: App.css  App.tsx  routes.tsx
services/mpa/src/components/: User.tsx  UserModal.tsx
services/mpa/src/pages/: HomePage.tsx  UserDetailsPage.tsx
services/spa/: Dockerfile  package-lock.json  package.json
services/spa/src/: App.css  App.tsx  main.tsx
services/spa/src/components/: User.tsx
