[tool.poetry]
name = "mock-users-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
wemake-python-styleguide = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true 
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \__pycache__
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
)/
'''


[tool.flake8]
docstring-style = "sphinx"
ignore = [
    "D200",     # One-line docstring should fit on one line.
    "D301",     # Use r""" for multiline strings with backslashes.
    "WPS115",   # Found duplicate line.
    "W503",     # Line break before binary operator.
    "WPS407",   # Found mutable expression as a default value argument.
    "WPS226",   # Found too many nested loops.
    "WPS412",   # Found list with inhomogeneous elements.
]
rst-roles = [
    "class",
    "func",
    "ref",
]
rst-directives = [
    "envvar",
    "exception",
]
rst-substitutions = [
    "version",
]
extend-ignore = [
    "RST307",  # No content allowed after the directive
]
per-file-ignores = [
    "sending_messages/__init__.py:WPS412, WPS430",
    "*/__init__.py:F401",
    "sending_messages/kafka_manager/handlers/sending.py:WPS110",
]
exclude = [
    "setup.py",
]


[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 5 
include_trailing_comma = true
use_parentheses = true

